src/App.css
#root, html, body {
  margin: 0;
  padding: 0;
  height: 100vh;
  box-sizing: border-box;
}

h1.heading {
  font-size: 1.8em;
  font-weight: 300;
}

.app {
  height: 100%;
  background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('./images/tulips.jpg');
  background-size: cover;
  background-position: center;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.card {
  background-color: whitesmoke;
  width: 60%;
  height: 40%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  border-radius: 15px;
  padding: 2%;
}

.heading {
  display: flex;
  align-items: center;
  height: 580px;
  margin-left: 5px;
  margin-right: 5px;
  font-family: 'Quicksand', Arial, sans-serif
}

.button {
  position: relative;
  outline: none;
  text-decoration: none;
  border-radius: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  text-transform: uppercase;
  height: 120px;
  width: 260px;
  opacity: 1;
  background-color: #ffffff;
  border: 1px solid rgba(168, 117, 160, 0.6);
}
  
.button span {
  color: #852421;
  letter-spacing: 0.7px;
  font-size: 1.6em;
  font-weight: 400;
}

.button:hover {
  animation: rotate 0.6s ease-in-out both;
}

@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }
  25% {
    transform: rotate(3deg);
  }
  50% {
    transform: rotate(-3deg);
  }
  75% {
    transform: rotate(1deg);
  }
  100% {
    transform: rotate(0deg);
  }
}

@media only screen and (max-width: 600px) {
  .card {
      width: 80%;
      height: 30%;
  }

  h1.heading {
    font-size: 1.2em;
  }
  .button {
    margin-bottom: 10px;
  }

  .button span {
    font-size: 1.3em;
  }
}

